# content-generator-agent

./: README.md  content.ipynb  fix_nb2.py  graph_state.py  llm_config.py  llm_schema.py  main.py  pyproject.toml  utils.py  workflow.py
node/: confirm_headings.py  detect_headings.py  human_review.py  normalize_headings.py  read_file.py  revise_headings_node.py  save_axes_node.py  save_target_folder.py  split_content.py
